# loom

./: .gitignore  .loom-public-output.json  .mcp.json  BENCHMARK.md  CHANGELOG.md  CONTRIBUTING.md  FEEDBACK.md  PRIVACY.md  README.md  START-HERE.md  TERMS.md
.codex-plugin/: plugin.json
.github/: dependabot.yml
contracts/: adapter-protocol-v2.json  cache-classes-v1.json  current-facts-v1.json  domain-intelligence-v1.json  evidence-policy-v1.json  host-contracts-v2.json  owner-learning-v3.json  performance-accounting-v3.json  planning-intelligence-v1.json  project-inspection-policy-v1.json  score-rubric-v1.json  score-rubric-v2.json  tier-s-fast-path-v1.json
docs/: 404.html  architecture.md  capabilities.json  cross-cutting-scoring.md  generated-evidence.json  index.html  integration-ecosystem.md  limitations.md  loom-1.1-compatibility.md  loom-1.1-threat-model.md  operations.md  phase-7-validation.md  planning-intelligence.md  release-readiness.json  release-readiness.md  robots.txt  simple-adaptive-experience.md  site.css  site.js  sitemap.xml  start.md  support-bundles.md  token-efficiency.md  unknown-domain-intelligence.md
hooks/: hooks.json
loom/: PERFORMANCE-PRIVACY-RELIABILITY.md
schemas/: acceptance-evidence.schema.json  adapter-conformance.schema.json  adapter-message.schema.json  adapter-ownership-receipt.schema.json  adapter-protocol.schema.json  (+92 more)
vault-helper/: Cargo.toml
vault-helper/fuzz/: Cargo.toml
vault-helper/fuzz/fuzz_targets/: crypto_envelope.rs  helper_request.rs  learning_event_v3.rs  legacy_learning_import.rs
vault-helper/src/: lib.rs  main.rs
(+333 files in other folders)
